Switching to Maven
Made the switch since the auto-completion did not seem to work well with
the gradle plug-in for jshell. Now everything seems to work well.