@@ -1,23 +1,45 @@
 # jmc-jshell
 Easy way to get started experimenting with the JDK Flight Recorder and the JMC core classes.
 
-Note, that for this to work, you will need a relatively recent gradle. There is a gradle wrapper included
-to make it easier to get started.
-
-To run, first set the JAVA_HOME environment variable to point to your JDK 11 installation. For example, on Mac OS X, this could look like this:
+First ensure that you are running with a JDK 9 or later. Then run:
 
 ```bash
-export JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-11.jdk/Contents/Home
+mvn compile
+mvn jshell:run
 ```
 
-Then run it with:
+You should now be presented with a jshell command line. 
 
 ```bash
-./gradlew --no-daemon --console plain jshell
+
+|  Welcome to JShell -- Version 11
+|  For an introduction type: /help intro
+
+jshell>
 ```
 
-You may have to set the following environment variable as well:
+At the prompt run the following to set up some imports:
 
 ```bash
-_JAVA_OPTIONS="--add-exports=jdk.jshell/jdk.internal.jshell.tool=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED"
+/open jmc.jsh
+```
+
+Now you are ready to play around with the JMC core APIs.
+
+##Example
+
+Here is an example of a session calculating the standard deviation for the java monitor enter events in the example recording:
+
+```bash
+jshell> var allEvents = JfrLoaderToolkit.loadEvents(new File("latency.jfr"))
+allEvents ==> org.openjdk.jmc.flightrecorder.EventCollection@7f010382
+
+jshell> var monitorEnterEvents = allEvents.apply(ItemFilters.type(JdkTypeIDs.MONITOR_ENTER))
+monitorEnterEvents ==> org.openjdk.jmc.flightrecorder.EventCollection@433d61fb
+
+jshell> var stddev = monitorEnterEvents.getAggregate(Aggregators.stddev(JfrAttributes.DURATION))
+stddev ==> 2.11292968454666E9ticks[ticks]
+
+jshell> stddev.displayUsing(IDisplayable.AUTO)
+$9 ==> "2,113 s"
 ```
